--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,5 +3,6 @@ pkgdown: 2.0.2
 pkgdown_sha: ~
 articles:
   test: test.html
-last_built: 2022-02-18T17:06Z
+last_built: 2022-02-18T22:19Z
+always_allow_html: true
 
